--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -6,7 +6,7 @@ footer {
 }
 
 footer .footer {
-  max-width: 1200px;
+  max-width: var(--max-width-lg);
   margin: auto;
 }
 
